Thu May  8 11:40:39 1997  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: In setting "tests" use a number of statements rather
	than one very long line.

Thu May  8 11:40:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvsbug.sh: Remove $Id; we decided to get rid of these some time
	ago.

Thu May  8 11:34:02 1997  Larry Jones  <larry.jones@sdrc.com>

	* cvsbug.sh: Put separate statements on separate lines, so it
	works if awk is AT&T nawk.

Tue May  6 16:56:00 1997  Larry Jones  <larry.jones@sdrc.com>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvsrc.c (read_cvsrc): Fix various memory allocation problems:
	rearrange code to avoid leaks, use xrealloc instead of xmalloc/
	copy/free, make sure there's room for the remaining args before
	appending them.

Tue May  6 14:20:00 1997  Larry Jones  <larry.jones@sdrc.com>

	* edit.c (watch_onoff, edit, unedit, editors): Add -R like
	other things with -l.
	* watch.c (watch_addremove, watchers): Ditto.

Mon May  5 18:10:37 1997  larry.jones@sdrc.com
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Change all /tmp/cvs-sanity to TESTDIR.  If TESTDIR
	environment variable is set, use it instead of /tmp/cvs-sanity.
	* sanity.sh: Make TMPPWD the pwd equivalent of TESTDIR, not of /tmp.

4 May 1997  Larry jones  <larry.jones@sdrc.com>
	    and Jim Kingdon

	* checkout.c, diff.c, patch.c, rcs.c: Update usage messages.
	* rcs.c (annotate): Add -R like other things with -l.

Sat May  3 14:57:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basic1): Rewrite test (use dotest, unroll the loops
	which IMHO makes the test a zillion times more understandable, and
	only do the variant which tests for 4 files at a time--we test one
	file at a time lots of places).

2 May 1997  Ziv Gigus <ziv@rest.home.net>
	    and Jim Kingdon

	* client.c, client.h (client_process_import_file): New argument
	all_files_binary means treat all files as binary.
	* import.c (import_descend): Pass it if -kb is specified.